y.output
State 23 conflicts: 3 reduce/reduce
State 47 conflicts: 6 reduce/reduce
State 51 conflicts: 3 reduce/reduce
State 53 conflicts: 4 shift/reduce
State 54 conflicts: 1 shift/reduce
State 55 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 102 conflicts: 2 shift/reduce
State 103 conflicts: 2 shift/reduce
State 110 conflicts: 4 shift/reduce
State 111 conflicts: 4 shift/reduce
State 112 conflicts: 4 shift/reduce
State 113 conflicts: 4 shift/reduce
State 139 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 identifier: ID
    2           | ID DOT identifier

    3 imports: IMPORT identifier SEMICOLON
    4        | IMPORT identifier SEMICOLON imports

    5 multiplyExpression: NUMBER
    6                   | identifier
    7                   | OPENPAREN multiplyExpression CLOSEPAREN
    8                   | multiplyExpression TIMES multiplyExpression
    9                   | multiplyExpression DIVIDE multiplyExpression

   10 arithmeticExpression: multiplyExpression
   11                     | arithmeticExpression PLUS arithmeticExpression
   12                     | arithmeticExpression MINUS arithmeticExpression
   13                     | OPENPAREN arithmeticExpression CLOSEPAREN

   14 booleanExpression: TRUE
   15                  | FALSE
   16                  | identifier
   17                  | OPENPAREN booleanExpression CLOSEPAREN
   18                  | arithmeticExpression EQ arithmeticExpression
   19                  | arithmeticExpression NEQ arithmeticExpression
   20                  | arithmeticExpression LT arithmeticExpression
   21                  | arithmeticExpression GT arithmeticExpression
   22                  | arithmeticExpression LE arithmeticExpression
   23                  | arithmeticExpression GE arithmeticExpression
   24                  | booleanExpression AND booleanExpression
   25                  | booleanExpression OR booleanExpression
   26                  | NOT booleanExpression
   27                  | booleanExpression EQ booleanExpression
   28                  | booleanExpression NEQ booleanExpression

   29 type: UINT8
   30     | INT8
   31     | UINT16
   32     | INT16
   33     | UINT32
   34     | INT32
   35     | UINT64
   36     | INT64
   37     | BOOL
   38     | VOID
   39     | identifier

   40 variableDeclaration: type ID SEMICOLON

   41 variableDefinition: type ID ASSIGN expression SEMICOLON

   42 variableAssignment: identifier ASSIGN expression SEMICOLON

   43 argList: type ID
   44        | argList COMMA argList

   45 functionDeclaration: type ID OPENPAREN CLOSEPAREN OPENCURLY body CLOSECURLY
   46                    | type ID OPENPAREN argList CLOSEPAREN OPENCURLY body CLOSECURLY

   47 exprList: expression
   48         | exprList COMMA exprList

   49 functionCall: identifier OPENPAREN CLOSEPAREN
   50             | identifier OPENPAREN exprList CLOSEPAREN

   51 declarationList: %empty
   52                | variableDeclaration declarationList

   53 structDeclaration: STRUCT ID OPENCURLY declarationList CLOSECURLY

   54 structCreation: identifier OPENCURLY exprList CLOSECURLY

   55 expression: arithmeticExpression
   56           | booleanExpression
   57           | functionCall
   58           | structCreation
   59           | NULLTOKEN
   60           | OPENPAREN expression CLOSEPAREN

   61 namespaceDeclaration: NAMESPACE identifier OPENCURLY body CLOSECURLY

   62 return: RETURN SEMICOLON
   63       | RETURN expression SEMICOLON

   64 statement: variableAssignment
   65          | variableDeclaration
   66          | variableDefinition
   67          | structDeclaration
   68          | namespaceDeclaration
   69          | expression SEMICOLON
   70          | functionDeclaration
   71          | IF OPENPAREN booleanExpression CLOSEPAREN OPENCURLY body CLOSECURLY
   72          | IF OPENPAREN booleanExpression CLOSEPAREN OPENCURLY body CLOSECURLY ELSE OPENCURLY body CLOSECURLY
   73          | return

   74 body: %empty
   75     | statement body

   76 program: body
   77        | imports body


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IMPORT <tokenText> (258) 3 4
    NAMESPACE <tokenText> (259) 61
    STRUCT <tokenText> (260) 53
    IF <tokenText> (261) 71 72
    ELSE <tokenText> (262) 72
    TRUE <tokenText> (263) 14
    FALSE <tokenText> (264) 15
    NULLTOKEN <tokenText> (265) 59
    UINT8 <tokenText> (266) 29
    INT8 <tokenText> (267) 30
    UINT16 <tokenText> (268) 31
    INT16 <tokenText> (269) 32
    UINT32 <tokenText> (270) 33
    INT32 <tokenText> (271) 34
    UINT64 <tokenText> (272) 35
    INT64 <tokenText> (273) 36
    BOOL <tokenText> (274) 37
    VOID <tokenText> (275) 38
    RETURN <tokenText> (276) 62 63
    NUMBER <tokenText> (277) 5
    ID <tokenText> (278) 1 2 40 41 43 45 46 53
    PLUS <tokenText> (279) 11
    MINUS <tokenText> (280) 12
    TIMES <tokenText> (281) 8
    DIVIDE <tokenText> (282) 9
    EQ <tokenText> (283) 18 27
    NEQ <tokenText> (284) 19 28
    LT <tokenText> (285) 20
    GT <tokenText> (286) 21
    LE <tokenText> (287) 22
    GE <tokenText> (288) 23
    AND <tokenText> (289) 24
    OR <tokenText> (290) 25
    NOT <tokenText> (291) 26
    ASSIGN <tokenText> (292) 41 42
    COMMA <tokenText> (293) 44 48
    SEMICOLON <tokenText> (294) 3 4 40 41 42 62 63 69
    DOT <tokenText> (295) 2
    OPENPAREN <tokenText> (296) 7 13 17 45 46 49 50 60 71 72
    CLOSEPAREN <tokenText> (297) 7 13 17 45 46 49 50 60 71 72
    OPENCURLY <tokenText> (298) 45 46 53 54 61 71 72
    CLOSECURLY <tokenText> (299) 45 46 53 54 61 71 72


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    identifier <identifierNode> (46)
        on left: 1 2
        on right: 2 3 4 6 16 39 42 49 50 54 61
    imports <imports> (47)
        on left: 3 4
        on right: 4 77
    multiplyExpression <multiplyExpression> (48)
        on left: 5 6 7 8 9
        on right: 7 8 9 10
    arithmeticExpression (49)
        on left: 10 11 12 13
        on right: 11 12 13 18 19 20 21 22 23 55
    booleanExpression (50)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 17 24 25 26 27 28 56 71 72
    type (51)
        on left: 29 30 31 32 33 34 35 36 37 38 39
        on right: 40 41 43 45 46
    variableDeclaration (52)
        on left: 40
        on right: 52 65
    variableDefinition (53)
        on left: 41
        on right: 66
    variableAssignment (54)
        on left: 42
        on right: 64
    argList (55)
        on left: 43 44
        on right: 44 46
    functionDeclaration (56)
        on left: 45 46
        on right: 70
    exprList (57)
        on left: 47 48
        on right: 48 50 54
    functionCall (58)
        on left: 49 50
        on right: 57
    declarationList (59)
        on left: 51 52
        on right: 52 53
    structDeclaration (60)
        on left: 53
        on right: 67
    structCreation (61)
        on left: 54
        on right: 58
    expression (62)
        on left: 55 56 57 58 59 60
        on right: 41 42 47 60 63 69
    namespaceDeclaration (63)
        on left: 61
        on right: 68
    return (64)
        on left: 62 63
        on right: 73
    statement (65)
        on left: 64 65 66 67 68 69 70 71 72 73
        on right: 75
    body (66)
        on left: 74 75
        on right: 45 46 61 71 72 75 76 77
    program (67)
        on left: 76 77
        on right: 0


State 0

    0 $accept: . program $end

    IMPORT     shift, and go to state 1
    NAMESPACE  shift, and go to state 2
    STRUCT     shift, and go to state 3
    IF         shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NULLTOKEN  shift, and go to state 7
    UINT8      shift, and go to state 8
    INT8       shift, and go to state 9
    UINT16     shift, and go to state 10
    INT16      shift, and go to state 11
    UINT32     shift, and go to state 12
    INT32      shift, and go to state 13
    UINT64     shift, and go to state 14
    INT64      shift, and go to state 15
    BOOL       shift, and go to state 16
    VOID       shift, and go to state 17
    RETURN     shift, and go to state 18
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 22

    $default  reduce using rule 74 (body)

    identifier            go to state 23
    imports               go to state 24
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 26
    booleanExpression     go to state 27
    type                  go to state 28
    variableDeclaration   go to state 29
    variableDefinition    go to state 30
    variableAssignment    go to state 31
    functionDeclaration   go to state 32
    functionCall          go to state 33
    structDeclaration     go to state 34
    structCreation        go to state 35
    expression            go to state 36
    namespaceDeclaration  go to state 37
    return                go to state 38
    statement             go to state 39
    body                  go to state 40
    program               go to state 41


State 1

    3 imports: IMPORT . identifier SEMICOLON
    4        | IMPORT . identifier SEMICOLON imports

    ID  shift, and go to state 20

    identifier  go to state 42


State 2

   61 namespaceDeclaration: NAMESPACE . identifier OPENCURLY body CLOSECURLY

    ID  shift, and go to state 20

    identifier  go to state 43


State 3

   53 structDeclaration: STRUCT . ID OPENCURLY declarationList CLOSECURLY

    ID  shift, and go to state 44


State 4

   71 statement: IF . OPENPAREN booleanExpression CLOSEPAREN OPENCURLY body CLOSECURLY
   72          | IF . OPENPAREN booleanExpression CLOSEPAREN OPENCURLY body CLOSECURLY ELSE OPENCURLY body CLOSECURLY

    OPENPAREN  shift, and go to state 45


State 5

   14 booleanExpression: TRUE .

    $default  reduce using rule 14 (booleanExpression)


State 6

   15 booleanExpression: FALSE .

    $default  reduce using rule 15 (booleanExpression)


State 7

   59 expression: NULLTOKEN .

    $default  reduce using rule 59 (expression)


State 8

   29 type: UINT8 .

    $default  reduce using rule 29 (type)


State 9

   30 type: INT8 .

    $default  reduce using rule 30 (type)


State 10

   31 type: UINT16 .

    $default  reduce using rule 31 (type)


State 11

   32 type: INT16 .

    $default  reduce using rule 32 (type)


State 12

   33 type: UINT32 .

    $default  reduce using rule 33 (type)


State 13

   34 type: INT32 .

    $default  reduce using rule 34 (type)


State 14

   35 type: UINT64 .

    $default  reduce using rule 35 (type)


State 15

   36 type: INT64 .

    $default  reduce using rule 36 (type)


State 16

   37 type: BOOL .

    $default  reduce using rule 37 (type)


State 17

   38 type: VOID .

    $default  reduce using rule 38 (type)


State 18

   62 return: RETURN . SEMICOLON
   63       | RETURN . expression SEMICOLON

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NULLTOKEN  shift, and go to state 7
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    SEMICOLON  shift, and go to state 46
    OPENPAREN  shift, and go to state 22

    identifier            go to state 47
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 26
    booleanExpression     go to state 27
    functionCall          go to state 33
    structCreation        go to state 35
    expression            go to state 48


State 19

    5 multiplyExpression: NUMBER .

    $default  reduce using rule 5 (multiplyExpression)


State 20

    1 identifier: ID .
    2           | ID . DOT identifier

    DOT  shift, and go to state 49

    $default  reduce using rule 1 (identifier)


State 21

   26 booleanExpression: NOT . booleanExpression

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 50

    identifier            go to state 51
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 52
    booleanExpression     go to state 53


State 22

    7 multiplyExpression: OPENPAREN . multiplyExpression CLOSEPAREN
   13 arithmeticExpression: OPENPAREN . arithmeticExpression CLOSEPAREN
   17 booleanExpression: OPENPAREN . booleanExpression CLOSEPAREN
   60 expression: OPENPAREN . expression CLOSEPAREN

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NULLTOKEN  shift, and go to state 7
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 22

    identifier            go to state 47
    multiplyExpression    go to state 54
    arithmeticExpression  go to state 55
    booleanExpression     go to state 56
    functionCall          go to state 33
    structCreation        go to state 35
    expression            go to state 57


State 23

    6 multiplyExpression: identifier .
   16 booleanExpression: identifier .
   39 type: identifier .
   42 variableAssignment: identifier . ASSIGN expression SEMICOLON
   49 functionCall: identifier . OPENPAREN CLOSEPAREN
   50             | identifier . OPENPAREN exprList CLOSEPAREN
   54 structCreation: identifier . OPENCURLY exprList CLOSECURLY

    ASSIGN     shift, and go to state 58
    OPENPAREN  shift, and go to state 59
    OPENCURLY  shift, and go to state 60

    ID         reduce using rule 39 (type)
    EQ         reduce using rule 6 (multiplyExpression)
    EQ         [reduce using rule 16 (booleanExpression)]
    NEQ        reduce using rule 6 (multiplyExpression)
    NEQ        [reduce using rule 16 (booleanExpression)]
    AND        reduce using rule 16 (booleanExpression)
    OR         reduce using rule 16 (booleanExpression)
    SEMICOLON  reduce using rule 6 (multiplyExpression)
    SEMICOLON  [reduce using rule 16 (booleanExpression)]
    $default   reduce using rule 6 (multiplyExpression)


State 24

   77 program: imports . body

    NAMESPACE  shift, and go to state 2
    STRUCT     shift, and go to state 3
    IF         shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NULLTOKEN  shift, and go to state 7
    UINT8      shift, and go to state 8
    INT8       shift, and go to state 9
    UINT16     shift, and go to state 10
    INT16      shift, and go to state 11
    UINT32     shift, and go to state 12
    INT32      shift, and go to state 13
    UINT64     shift, and go to state 14
    INT64      shift, and go to state 15
    BOOL       shift, and go to state 16
    VOID       shift, and go to state 17
    RETURN     shift, and go to state 18
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 22

    $default  reduce using rule 74 (body)

    identifier            go to state 23
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 26
    booleanExpression     go to state 27
    type                  go to state 28
    variableDeclaration   go to state 29
    variableDefinition    go to state 30
    variableAssignment    go to state 31
    functionDeclaration   go to state 32
    functionCall          go to state 33
    structDeclaration     go to state 34
    structCreation        go to state 35
    expression            go to state 36
    namespaceDeclaration  go to state 37
    return                go to state 38
    statement             go to state 39
    body                  go to state 61


State 25

    8 multiplyExpression: multiplyExpression . TIMES multiplyExpression
    9                   | multiplyExpression . DIVIDE multiplyExpression
   10 arithmeticExpression: multiplyExpression .

    TIMES   shift, and go to state 62
    DIVIDE  shift, and go to state 63

    $default  reduce using rule 10 (arithmeticExpression)


State 26

   11 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   12                     | arithmeticExpression . MINUS arithmeticExpression
   18 booleanExpression: arithmeticExpression . EQ arithmeticExpression
   19                  | arithmeticExpression . NEQ arithmeticExpression
   20                  | arithmeticExpression . LT arithmeticExpression
   21                  | arithmeticExpression . GT arithmeticExpression
   22                  | arithmeticExpression . LE arithmeticExpression
   23                  | arithmeticExpression . GE arithmeticExpression
   55 expression: arithmeticExpression .

    PLUS   shift, and go to state 64
    MINUS  shift, and go to state 65
    EQ     shift, and go to state 66
    NEQ    shift, and go to state 67
    LT     shift, and go to state 68
    GT     shift, and go to state 69
    LE     shift, and go to state 70
    GE     shift, and go to state 71

    $default  reduce using rule 55 (expression)


State 27

   24 booleanExpression: booleanExpression . AND booleanExpression
   25                  | booleanExpression . OR booleanExpression
   27                  | booleanExpression . EQ booleanExpression
   28                  | booleanExpression . NEQ booleanExpression
   56 expression: booleanExpression .

    EQ   shift, and go to state 72
    NEQ  shift, and go to state 73
    AND  shift, and go to state 74
    OR   shift, and go to state 75

    $default  reduce using rule 56 (expression)


State 28

   40 variableDeclaration: type . ID SEMICOLON
   41 variableDefinition: type . ID ASSIGN expression SEMICOLON
   45 functionDeclaration: type . ID OPENPAREN CLOSEPAREN OPENCURLY body CLOSECURLY
   46                    | type . ID OPENPAREN argList CLOSEPAREN OPENCURLY body CLOSECURLY

    ID  shift, and go to state 76


State 29

   65 statement: variableDeclaration .

    $default  reduce using rule 65 (statement)


State 30

   66 statement: variableDefinition .

    $default  reduce using rule 66 (statement)


State 31

   64 statement: variableAssignment .

    $default  reduce using rule 64 (statement)


State 32

   70 statement: functionDeclaration .

    $default  reduce using rule 70 (statement)


State 33

   57 expression: functionCall .

    $default  reduce using rule 57 (expression)


State 34

   67 statement: structDeclaration .

    $default  reduce using rule 67 (statement)


State 35

   58 expression: structCreation .

    $default  reduce using rule 58 (expression)


State 36

   69 statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 77


State 37

   68 statement: namespaceDeclaration .

    $default  reduce using rule 68 (statement)


State 38

   73 statement: return .

    $default  reduce using rule 73 (statement)


State 39

   75 body: statement . body

    NAMESPACE  shift, and go to state 2
    STRUCT     shift, and go to state 3
    IF         shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NULLTOKEN  shift, and go to state 7
    UINT8      shift, and go to state 8
    INT8       shift, and go to state 9
    UINT16     shift, and go to state 10
    INT16      shift, and go to state 11
    UINT32     shift, and go to state 12
    INT32      shift, and go to state 13
    UINT64     shift, and go to state 14
    INT64      shift, and go to state 15
    BOOL       shift, and go to state 16
    VOID       shift, and go to state 17
    RETURN     shift, and go to state 18
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 22

    $default  reduce using rule 74 (body)

    identifier            go to state 23
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 26
    booleanExpression     go to state 27
    type                  go to state 28
    variableDeclaration   go to state 29
    variableDefinition    go to state 30
    variableAssignment    go to state 31
    functionDeclaration   go to state 32
    functionCall          go to state 33
    structDeclaration     go to state 34
    structCreation        go to state 35
    expression            go to state 36
    namespaceDeclaration  go to state 37
    return                go to state 38
    statement             go to state 39
    body                  go to state 78


State 40

   76 program: body .

    $default  reduce using rule 76 (program)


State 41

    0 $accept: program . $end

    $end  shift, and go to state 79


State 42

    3 imports: IMPORT identifier . SEMICOLON
    4        | IMPORT identifier . SEMICOLON imports

    SEMICOLON  shift, and go to state 80


State 43

   61 namespaceDeclaration: NAMESPACE identifier . OPENCURLY body CLOSECURLY

    OPENCURLY  shift, and go to state 81


State 44

   53 structDeclaration: STRUCT ID . OPENCURLY declarationList CLOSECURLY

    OPENCURLY  shift, and go to state 82


State 45

   71 statement: IF OPENPAREN . booleanExpression CLOSEPAREN OPENCURLY body CLOSECURLY
   72          | IF OPENPAREN . booleanExpression CLOSEPAREN OPENCURLY body CLOSECURLY ELSE OPENCURLY body CLOSECURLY

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 50

    identifier            go to state 51
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 52
    booleanExpression     go to state 83


State 46

   62 return: RETURN SEMICOLON .

    $default  reduce using rule 62 (return)


State 47

    6 multiplyExpression: identifier .
   16 booleanExpression: identifier .
   49 functionCall: identifier . OPENPAREN CLOSEPAREN
   50             | identifier . OPENPAREN exprList CLOSEPAREN
   54 structCreation: identifier . OPENCURLY exprList CLOSECURLY

    OPENPAREN  shift, and go to state 59
    OPENCURLY  shift, and go to state 60

    EQ          reduce using rule 6 (multiplyExpression)
    EQ          [reduce using rule 16 (booleanExpression)]
    NEQ         reduce using rule 6 (multiplyExpression)
    NEQ         [reduce using rule 16 (booleanExpression)]
    AND         reduce using rule 16 (booleanExpression)
    OR          reduce using rule 16 (booleanExpression)
    COMMA       reduce using rule 6 (multiplyExpression)
    COMMA       [reduce using rule 16 (booleanExpression)]
    SEMICOLON   reduce using rule 6 (multiplyExpression)
    SEMICOLON   [reduce using rule 16 (booleanExpression)]
    CLOSEPAREN  reduce using rule 6 (multiplyExpression)
    CLOSEPAREN  [reduce using rule 16 (booleanExpression)]
    CLOSECURLY  reduce using rule 6 (multiplyExpression)
    CLOSECURLY  [reduce using rule 16 (booleanExpression)]
    $default    reduce using rule 6 (multiplyExpression)


State 48

   63 return: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 84


State 49

    2 identifier: ID DOT . identifier

    ID  shift, and go to state 20

    identifier  go to state 85


State 50

    7 multiplyExpression: OPENPAREN . multiplyExpression CLOSEPAREN
   13 arithmeticExpression: OPENPAREN . arithmeticExpression CLOSEPAREN
   17 booleanExpression: OPENPAREN . booleanExpression CLOSEPAREN

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 50

    identifier            go to state 51
    multiplyExpression    go to state 54
    arithmeticExpression  go to state 86
    booleanExpression     go to state 87


State 51

    6 multiplyExpression: identifier .
   16 booleanExpression: identifier .

    EQ          reduce using rule 6 (multiplyExpression)
    EQ          [reduce using rule 16 (booleanExpression)]
    NEQ         reduce using rule 6 (multiplyExpression)
    NEQ         [reduce using rule 16 (booleanExpression)]
    AND         reduce using rule 16 (booleanExpression)
    OR          reduce using rule 16 (booleanExpression)
    COMMA       reduce using rule 16 (booleanExpression)
    SEMICOLON   reduce using rule 16 (booleanExpression)
    CLOSEPAREN  reduce using rule 6 (multiplyExpression)
    CLOSEPAREN  [reduce using rule 16 (booleanExpression)]
    CLOSECURLY  reduce using rule 16 (booleanExpression)
    $default    reduce using rule 6 (multiplyExpression)


State 52

   11 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   12                     | arithmeticExpression . MINUS arithmeticExpression
   18 booleanExpression: arithmeticExpression . EQ arithmeticExpression
   19                  | arithmeticExpression . NEQ arithmeticExpression
   20                  | arithmeticExpression . LT arithmeticExpression
   21                  | arithmeticExpression . GT arithmeticExpression
   22                  | arithmeticExpression . LE arithmeticExpression
   23                  | arithmeticExpression . GE arithmeticExpression

    PLUS   shift, and go to state 64
    MINUS  shift, and go to state 65
    EQ     shift, and go to state 66
    NEQ    shift, and go to state 67
    LT     shift, and go to state 68
    GT     shift, and go to state 69
    LE     shift, and go to state 70
    GE     shift, and go to state 71


State 53

   24 booleanExpression: booleanExpression . AND booleanExpression
   25                  | booleanExpression . OR booleanExpression
   26                  | NOT booleanExpression .
   27                  | booleanExpression . EQ booleanExpression
   28                  | booleanExpression . NEQ booleanExpression

    EQ   shift, and go to state 72
    NEQ  shift, and go to state 73
    AND  shift, and go to state 74
    OR   shift, and go to state 75

    EQ        [reduce using rule 26 (booleanExpression)]
    NEQ       [reduce using rule 26 (booleanExpression)]
    AND       [reduce using rule 26 (booleanExpression)]
    OR        [reduce using rule 26 (booleanExpression)]
    $default  reduce using rule 26 (booleanExpression)


State 54

    7 multiplyExpression: OPENPAREN multiplyExpression . CLOSEPAREN
    8                   | multiplyExpression . TIMES multiplyExpression
    9                   | multiplyExpression . DIVIDE multiplyExpression
   10 arithmeticExpression: multiplyExpression .

    TIMES       shift, and go to state 62
    DIVIDE      shift, and go to state 63
    CLOSEPAREN  shift, and go to state 88

    CLOSEPAREN  [reduce using rule 10 (arithmeticExpression)]
    $default    reduce using rule 10 (arithmeticExpression)


State 55

   11 arithmeticExpression: arithmeticExpression . PLUS arithmeticExpression
   12                     | arithmeticExpression . MINUS arithmeticExpression
   13                     | OPENPAREN arithmeticExpression . CLOSEPAREN
   18 booleanExpression: arithmeticExpression . EQ arithmeticExpression
   19                  | arithmeticExpression . NEQ arithmeticExpression
   20                  | arithmeticExpression . LT arithmeticExpression
   21                  | arithmeticExpression . GT arithmeticExpression
   22                  | arithmeticExpression . LE arithmeticExpression
   23                  | arithmeticExpression . GE arithmeticExpression
   55 expression: arithmeticExpression .

    PLUS        shift, and go to state 64
    MINUS       shift, and go to state 65
    EQ          shift, and go to state 66
    NEQ         shift, and go to state 67
    LT          shift, and go to state 68
    GT          shift, and go to state 69
    LE          shift, and go to state 70
    GE          shift, and go to state 71
    CLOSEPAREN  shift, and go to state 89

    CLOSEPAREN  [reduce using rule 55 (expression)]


State 56

   17 booleanExpression: OPENPAREN booleanExpression . CLOSEPAREN
   24                  | booleanExpression . AND booleanExpression
   25                  | booleanExpression . OR booleanExpression
   27                  | booleanExpression . EQ booleanExpression
   28                  | booleanExpression . NEQ booleanExpression
   56 expression: booleanExpression .

    EQ          shift, and go to state 72
    NEQ         shift, and go to state 73
    AND         shift, and go to state 74
    OR          shift, and go to state 75
    CLOSEPAREN  shift, and go to state 90

    CLOSEPAREN  [reduce using rule 56 (expression)]


State 57

   60 expression: OPENPAREN expression . CLOSEPAREN

    CLOSEPAREN  shift, and go to state 91


State 58

   42 variableAssignment: identifier ASSIGN . expression SEMICOLON

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NULLTOKEN  shift, and go to state 7
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 22

    identifier            go to state 47
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 26
    booleanExpression     go to state 27
    functionCall          go to state 33
    structCreation        go to state 35
    expression            go to state 92


State 59

   49 functionCall: identifier OPENPAREN . CLOSEPAREN
   50             | identifier OPENPAREN . exprList CLOSEPAREN

    TRUE        shift, and go to state 5
    FALSE       shift, and go to state 6
    NULLTOKEN   shift, and go to state 7
    NUMBER      shift, and go to state 19
    ID          shift, and go to state 20
    NOT         shift, and go to state 21
    OPENPAREN   shift, and go to state 22
    CLOSEPAREN  shift, and go to state 93

    identifier            go to state 47
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 26
    booleanExpression     go to state 27
    exprList              go to state 94
    functionCall          go to state 33
    structCreation        go to state 35
    expression            go to state 95


State 60

   54 structCreation: identifier OPENCURLY . exprList CLOSECURLY

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NULLTOKEN  shift, and go to state 7
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 22

    identifier            go to state 47
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 26
    booleanExpression     go to state 27
    exprList              go to state 96
    functionCall          go to state 33
    structCreation        go to state 35
    expression            go to state 95


State 61

   77 program: imports body .

    $default  reduce using rule 77 (program)


State 62

    8 multiplyExpression: multiplyExpression TIMES . multiplyExpression

    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    OPENPAREN  shift, and go to state 97

    identifier          go to state 98
    multiplyExpression  go to state 99


State 63

    9 multiplyExpression: multiplyExpression DIVIDE . multiplyExpression

    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    OPENPAREN  shift, and go to state 97

    identifier          go to state 98
    multiplyExpression  go to state 100


State 64

   11 arithmeticExpression: arithmeticExpression PLUS . arithmeticExpression

    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    OPENPAREN  shift, and go to state 101

    identifier            go to state 98
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 102


State 65

   12 arithmeticExpression: arithmeticExpression MINUS . arithmeticExpression

    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    OPENPAREN  shift, and go to state 101

    identifier            go to state 98
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 103


State 66

   18 booleanExpression: arithmeticExpression EQ . arithmeticExpression

    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    OPENPAREN  shift, and go to state 101

    identifier            go to state 98
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 104


State 67

   19 booleanExpression: arithmeticExpression NEQ . arithmeticExpression

    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    OPENPAREN  shift, and go to state 101

    identifier            go to state 98
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 105


State 68

   20 booleanExpression: arithmeticExpression LT . arithmeticExpression

    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    OPENPAREN  shift, and go to state 101

    identifier            go to state 98
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 106


State 69

   21 booleanExpression: arithmeticExpression GT . arithmeticExpression

    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    OPENPAREN  shift, and go to state 101

    identifier            go to state 98
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 107


State 70

   22 booleanExpression: arithmeticExpression LE . arithmeticExpression

    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    OPENPAREN  shift, and go to state 101

    identifier            go to state 98
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 108


State 71

   23 booleanExpression: arithmeticExpression GE . arithmeticExpression

    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    OPENPAREN  shift, and go to state 101

    identifier            go to state 98
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 109


State 72

   27 booleanExpression: booleanExpression EQ . booleanExpression

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 50

    identifier            go to state 51
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 52
    booleanExpression     go to state 110


State 73

   28 booleanExpression: booleanExpression NEQ . booleanExpression

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 50

    identifier            go to state 51
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 52
    booleanExpression     go to state 111


State 74

   24 booleanExpression: booleanExpression AND . booleanExpression

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    NUMBER     shift, and go to state 19
    ID         shift, and go to state 20
    NOT        shift, and go to state 21
    OPENPAREN  shift, and go to state 50

    identifier            go to state 51
    multiplyExpression    go to state 25
    arithmeticExpression  go to state 52
    booleanExpression     go to state 112


State 75

   25 booleanExpression: booleanExpression OR . booleanExpression
